--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.2",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
